--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
 								</svg>
 							</div>
 							<div class="hero__content__info-text">
+								<span>Call now for a free consultation!</span>
 								<p>Fast, affordable, and professional electrical services in Orange County, CA. Licensed electricians available 24/7 for residential and commercial projects. Quality work guaranteed.</p>
 								<div>09:01 am 
 									<svg xmlns="http://www.w3.org/2000/svg" width="15" height="9" viewBox="0 0 15 9" fill="none">
@@ -504,11 +505,8 @@
 							</div>
 								<div class=" contact__item btn-row">
 								<div class="btn-row-icon">
-									<svg width="18" height="13" viewBox="0 0 18 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<path d="M17.8413 0.90332L12.3823 6.32713L17.8413 11.7509C17.9399 11.5447 17.9999 11.3167 17.9999 11.0732V1.58109C17.9999 1.33757 17.9399 1.10958 17.8413 0.90332Z" fill="white"/>
-									<path d="M16.4178 0H1.58206C1.33854 0 1.11056 0.0598675 0.904297 0.158551L7.88144 7.10052C8.49835 7.71746 9.5016 7.71746 10.1185 7.10052L17.0956 0.158551C16.8894 0.0598675 16.6614 0 16.4178 0Z" fill="white"/>
-									<path d="M0.158553 0.90332C0.0598704 1.10958 0 1.33757 0 1.58109V11.0732C0 11.3167 0.0598704 11.5448 0.158553 11.7509L5.61753 6.32713L0.158553 0.90332Z" fill="white"/>
-									<path d="M11.6366 7.07324L10.8642 7.8457C9.83622 8.87367 8.16363 8.87367 7.13572 7.8457L6.36326 7.07324L0.904297 12.497C1.11056 12.5958 1.33854 12.6556 1.58206 12.6556H16.4178C16.6614 12.6556 16.8894 12.5958 17.0956 12.497L11.6366 7.07324Z" fill="white"/>
+									<svg xmlns="http://www.w3.org/2000/svg" width="15" height="20" viewBox="0 0 15 20" fill="none">
+									<path d="M7.5 0C3.36675 0 0 3.3675 0 7.5C0 9.62475 1.0575 11.817 2.4285 13.8675C3.80025 15.9187 5.5155 17.826 6.96975 19.2803C7.1104 19.4209 7.30113 19.4998 7.5 19.4998C7.69887 19.4998 7.8896 19.4209 8.03025 19.2803C9.5175 17.793 11.2327 15.885 12.5963 13.8412C13.9598 11.7983 15 9.62025 15 7.5C15 3.3675 11.6333 0 7.5 0ZM7.5 4.5C9.14775 4.5 10.5 5.85225 10.5 7.5C10.5 9.14775 9.14775 10.5 7.5 10.5C5.85225 10.5 4.5 9.14775 4.5 7.5C4.5 5.85225 5.85225 4.5 7.5 4.5Z" fill="white"/>
 									</svg>
 								</div>
 								<div class="btn-row-wrap">
@@ -526,7 +524,7 @@
 
 								</div>
 								<div class="btn-row-wrap">
-								<a href="tel:949-514-6404">949-514-6404</a>
+								<a href="mailto:support@lcs-service.com">support@lcs-service.com</a>
 								<ul>
 									<li>write now</li>
 								</ul>
